--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "client"]
 	path = client
 	url = https://github.com/dalila-mlp/client
+[submodule "api"]
+	path = api
+	url = https://github.com/dalila-mlp/api
