--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+POSTGRES_DATA="/var/lib/postgresql/data"
+POSTGRES_DB="dalila"
 POSTGRES_USER="user"
 POSTGRES_PASSWORD="password"
 PGADMIN_EMAIL="email@example.com"
