--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       context: "./api/"
       dockerfile: "./docker/dev/php/Dockerfile"
     container_name: "dalila-api_php-container"
+    depends_on:
+      - "dalila-postgres-service"
     networks:
       - "dalila-net"
     ports:
@@ -42,9 +44,13 @@ services:
   dalila-postgres-service:
     container_name: "dalila-postgres-container"
     environment:
+      PGDATA: "${POSTGRES_DATA}"
+      POSTGRES_DB: "${POSTGRES_DB}"
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     image: "postgres"
+    networks:
+      - "dalila-net"
     ports:
       - "5432:5432"
     restart: "always"
@@ -58,9 +64,13 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: "${PGADMIN_EMAIL}"
       PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_PASSWORD}"
-    image: "dpage/pgadmin4"
+      PGADMIN_LISTEN_PORT: "80"
+    image: "dpage/pgadmin4:8.5"
+    networks:
+      - "dalila-net"
     ports:
-      - "8888:80"
+      - "8080:80"
     restart: "always"
     volumes:
+      - "./pgadmin/docker/dev/servers.json:/pgadmin4/servers.json"
       - "./pgadmin/:/var/lib/pgadmin/"
